# SiKIdle

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  conftest.py  main.py  pyproject.toml  requirements.txt  test_equipment_system.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  development_question.md  documentation.md  feature_request.md
.github/instructions/: python-instructions.md
.github/workflows/: build-android.yml
dev-tools/: indentation.py
dev-tools/scripts/: build_release.py  change_resolution.py  environment_analysis.py  environment_analysis_simple.py  mobile_dev.py  test_game_isolated.py  test_game_simple.py
dev-tools/tests/: test_core_systems.py
docs/: README.md
docs/checklist/: configuracion-movil-android.md  correccion-ventana-movil-fija.md  crear_ui_basica_android.md  expansion_profundidad_gameplay.md  sistema_logros_04_agosto_2025.md
docs/resumen/: 2025-01-03_navegacion_corregida.md  2025-08-03-configuracion-movil-android.md  correccion_navegacion_04_agosto_2025.md  resoluciones-moviles.md  resumen_final_implementacion_completa.md  revision_tecnica_final_2025_08_03.md  revision_tecnica_final_sikidle.md  unificacion_gestion_04_agosto_2025.md
releases/: .gitignore  README.md
src/: README.md  __init__.py  main.py  main_clean.py  main_mobile.py  main_old.py
src/assets/: README.md
src/config/: mobile_config.py
src/core/: __init__.py  achievements.py  achievements_idle.py  balance_manager.py  biomes.py  buildings.py  combat.py  combat_idle_integration.py  dimensional_prestige.py  dungeon_unlock.py  dungeons.py  enemies.py  engagement_system.py  equipment.py  equipment_integration.py  equipment_manager.py  game.py  gameplay_flow.py  inventory.py  loot.py  loot_combat_integration.py  performance_optimizer.py  (+11 more)
(+55 files in other folders)
