[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sikille"
version = "0.1.0"
description = "Un videojuego tipo idle clicker 2D para móviles, desarrollado en Python con Kivy"
authors = [
    {name = "Kavalieri", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["game", "idle", "clicker", "kivy", "python", "android", "mobile"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "kivy>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.2.0",
]
android = [
    "buildozer>=1.5.0",
    "cython>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/Kavalieri/SiKIdle"
Repository = "https://github.com/Kavalieri/SiKIdle"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = [
    "E501",  # line too long
    "W191",  # indentation contains tabs
    "E117",  # over-indented
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
strict = true

# Configuración específica para Android/móviles
[tool.sikille]
target_platforms = ["android", "windows"]
orientation = "portrait"
min_android_api = 21
target_android_api = 34